--- a/test.html
+++ b/test.html
@@ -7,5 +7,7 @@
         <h1>Hello, Welcome to my Hompage</h1>
         <hr>
         <p>The Page is thedjfa;fkaf;adjfa;adkfldf;kajdj;jf;ajda(error)</p>
+        <h2>Second Commit</h2>
+        <p>Congratulations</p>
     </body>
 </html>
